# imart

./: CMakeLists.txt  README.md  notes.txt
benchmarks/: CMakeLists.txt  CMakeLists.txt.old  affine_cpu_vs_gpu.cpp  grid_cpu_vs_gpu.cpp  image_convolve.cpp  image_copy_functions.cpp  image_fft.cpp  image_fft_cpu_vs_gpu.cpp  image_gradient_cpu_vs_gpu.cpp  image_reduction_cpu_vs_gpu.cpp  image_reduction_functions.cpp  image_scalar_cpu_vs_gpu.cpp  image_scalar_functions.cpp  image_vector_cpu_vs_gpu.cpp  image_vector_operations.cpp  interpolator_linear_cpu.cpp  interpolator_linear_cpu_gpu_cuda.cpp  interpolator_linear_cpu_vs_gpu.cpp  interpolator_linear_cuda.cpp  interpolator_linear_itk.cpp  interpolator_linear_itk2.cpp  interpolator_linear_opencl.cpp  interpolator_nearest_cpu_gpu_cuda.cpp  interpolator_nearest_cpu_vs_gpu.cpp  interpolator_nearest_itk.cpp  memory_cpu2gpu.cpp  memory_cpu2gpu_vcl.cpp  memory_gpu2cpu.cpp  memory_gpu2cpu_vcl.cpp  metric_ssd_cpu_vs_gpu.cpp  viennacl_vs_vector_vcl.cpp
benchmarks/analyze/: plot_bench.py  plot_bench_transform.py
container/: Dockerfile
examples/: CMakeLists.txt  affine_basic_cpu.cpp  affine_basic_cuda.cpp  affine_basic_gpu.cpp  affine_basic_ocl.cpp  affine_basic_opencl.cpp  affine_ilinear_cpu_gpu_itk.cpp  dfield_basic_cpu.cpp  dfield_basic_cuda.cpp  dfield_basic_gpu.cpp  dfield_basic_ocl.cpp  dfield_basic_opencl.cpp  dfield_read_write_cpu.cpp  dfield_transform_input.cpp  gaussian_filter.cpp  gpu_image2d_basic.cpp  image2d_arithmetic.cpp  image2d_arithmetic_gpu.cpp  image2d_arithmetic_ocl.cpp  image2d_arithmetic_old.cpp  image2d_arithmetic_opencl.cpp  image2d_basic.cpp  image2d_basic_old.cpp  image2d_fft.cpp  image2d_interpolator_linear.cpp  image2d_itk.cpp  image2d_meshgrid_gpu.cpp  image2d_utils.cpp  image_assert.cpp  image_bounding_box.cpp  image_conditions_cpu.cpp  image_conditions_gpu.cpp  image_conditions_ocl.cpp  image_conditions_opencl.cpp  image_copy.cpp  image_fft_cpu.cpp  image_fft_cuda.cpp  image_fft_gpu.cpp  image_fft_ocl.cpp  image_fft_opencl.cpp  (+99 more)
examples/images/: lpba_s01.nrrd  lpba_s02.nrrd  scaled_rire_ct_001.nrrd
inc/: image_base.hpp  transform_base.hpp
inc/utils/: opencl_config.hpp
src/: CMakeLists.txt  affine.h  affine_2d.h  affine_3d.h  cc.h  config.h  cuda_buffer.h  cuda_object.h  data_object.h  demons.h  demons_diffeomorphic.h  demons_loi.h  dfield.h  empty.h  global.h  gradient_descent.h  grid.h  horn_schunck.h  icubic.h  ilinear.h  image.h  image_2d.h  image_3d.h  image_base.cpp  image_base.h  image_base_gpu.h  image_gpu.h  image_utils.h  imart_config.h.in  inearest.h  inherit.h  interpolate.h  interpolator.h  kernels.h  lddmm.h  lddmm_beg.h  lddmm_loi.h  main.cpp  metric.h  metrics.h  (+25 more)
src/cuda/: CMakeLists.txt  interface.cu  interface.cuh  kernels.cu  kernels.cuh
src/utils/: assertion.h  opencl.h  opencl_config.cpp  opencl_config.h  timer.h  type.h
tests/: CMakeLists.txt  dfield_cpu.cpp  dfield_cuda.cpp  example_vector_cpu_aritmethic.cpp  example_vector_gpu_aritmethic.cpp  gpu_image2d_arithmetic.cpp  gpu_image2d_basic.cpp  image2d_arithmetic.cpp  image2d_basic.cpp  image2d_benchmarks.cpp  image2d_complex.cpp  image2d_fft.cpp  image2d_interpolate.cpp  image2d_itk.cpp  image2d_meshgrid.cpp  image2d_metric.cpp  image2d_optimizer.cpp  image2d_utils.cpp  image3d_basic.cpp  image3d_itk.cpp  image_copy.cpp  image_cpu.cpp  image_reduction.cpp  transform2d_basic.cpp  transform_compare_itk.cpp  vector_cpu.cpp  vector_cuda.cpp  vector_gpu_aritmethic.cpp  vector_ocl.cpp  vector_opencl.cpp  vector_vcl.cpp
tests/images/: cameraman20x16.tif
